Fixed spacing between elements

--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,7 @@ html, body{
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    gap: 10px;
+    /* gap: 10px; */
 }
 
 /* #canvas, #convex{
